# healvis

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README  README.md  coverage.xml  eorsky.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_out.hdf5
.github/workflows/: testsuite.yaml
.pytest_cache/v/cache/: nodeids
ci/: install_conda.sh  mindeps.yaml  tests.yaml
eorsky/: __init__.py  eorsky.py  pspec.py  pspec_funcs.py  utils.py  visibility.py
eorsky/scripts/: k_vs_z.py  unique_pixels.py
eorsky/tests/: test_21cm.py  test_bessel.py  test_comoving_vox.py  test_eorsky.py  test_gaussian.py  test_healpix-interp.py  test_hera_lin.py  test_mwa_gauss.py  test_mwa_lin.py  test_pspec.py  test_pspec_direct.py  test_rectloop.py  test_slk.py  test_visibility.py  tests.py
healvis/: GIT_INFO  __init__.py  beam_model.py  cosmo_funcs.py  cosmology.py  observatory.py  simulator.py  sky_model.py  skymodel.py  utils.py  version.py  visibility.py
healvis/data/: gsm_nside32.hdf5
healvis/data/configs/: HERA65_config.yaml  obsparam_test.yaml
healvis/tests/: __init__.py  conftest.py  test_beam_model.py  test_external_beam.py  test_observatory.py  test_pspec.py  test_simulator.py  test_sky_model.py  test_skymodel.py  test_utils.py  test_visibility.py
notebooks/: running_healvis.ipynb
scripts/: box_pspec.py  covar_vis.py  covar_vis_bl-vary.py  covar_vis_mpi.py  investigate_smallweights.py  make_gsm_shell.py  make_imaging_layout.py  make_point_sphere.py  multibaseline_beamvary_jobs.py  skymodel_vis_sim.py  test_21cm.py  test_comoving_vox.py  test_mwa_lin.py  test_sinewave.py  view_obs_coverage.py  vis_calc.py  vis_param_sim.py  vis_shell_calc.py
scripts/OLD/: experiments.py
scripts/configs/: obsparam_heragauss_24hours_nside128_hex.yaml  obsparam_heragauss_24hours_nside128_threelong.yaml  obsparam_heragauss_24hours_nside128_threeshort.yaml  obsparam_heragauss_24hours_nside256_oneew.yaml  obsparam_heragauss_24hours_nside512_oneew.yaml  obsparam_multibl.yaml  obsparam_mwagauss_24hours_nside128_hex.yaml  obsparam_mwagauss_24hours_nside128_threelong.yaml  obsparam_mwagauss_24hours_nside128_threeshort.yaml  obsparam_testfile.yaml
scripts/configs/obsolete/: obsparam_heragauss_24hours_nside128_threelong.yaml  obsparam_heragauss_24hours_nside128_threeshort.yaml  obsparam_heragauss_24hours_nside512_oneew.yaml  obsparam_multibl.yaml  obsparam_mwagauss_24hours_nside128_hex.yaml  obsparam_mwagauss_24hours_nside128_threelong.yaml
scripts/telescope_config/: HERA65_config.yaml  MULTIBL_layout.csv  MWA65_config.yaml  MWA_east_hex_layout.csv
test-reports/: xunit.xml
